Remove unused files and methods Reformat files

--- a/source/index-community.html
+++ b/source/index-community.html
@@ -55,13 +55,15 @@
              alt="logo" style="width: 100px; height: 100px;">
         <div class="space-y-12">
             <p class="dark:text-white text-center">Stremio-Jackett Community v3.0.13</p>
-            <h1 class="text-base font-semibold leading-7 text-gray-900 dark:text-white" style="text-align: center;font-size: 2rem;">
+            <h1 class="text-base font-semibold leading-7 text-gray-900 dark:text-white"
+                style="text-align: center;font-size: 2rem;">
                 Addon configuration</h1>
 
 
             <div class="border-b border-gray-900/10 dark:border-white/50 pb-12">
                 <h2 class="text-base font-semibold leading-7 text-gray-900 dark:text-white">Debrid Information</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter your debrid provider and its API
+                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter your debrid provider
+                    and its API
                     key here</p>
 
                 <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
@@ -91,7 +93,8 @@
 
             <div class="border-b border-gray-900/10 dark:border-white/50 pb-12">
                 <h2 class="text-base font-semibold leading-7 text-gray-900 dark:text-white">Direct Torrenting</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter information about the torrenting
+                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter information about the
+                    torrenting
                     settings</p>
                 <br>
                 <div class="relative flex gap-x-3">
@@ -100,8 +103,10 @@
                                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                     </div>
                     <div class="ms-2 text-sm">
-                        <label for="torrenting" class="font-medium text-gray-900 dark:text-gray-300">Enable torrenting</label>
-                        <p class="text-xs font-normal text-gray-500 dark:text-gray-400">Enable direct torrenting <span class="font-bold text-red-600 dark:text-red-500">(ATTENTION: this is illegal in some
+                        <label for="torrenting" class="font-medium text-gray-900 dark:text-gray-300">Enable
+                            torrenting</label>
+                        <p class="text-xs font-normal text-gray-500 dark:text-gray-400">Enable direct torrenting <span
+                                class="font-bold text-red-600 dark:text-red-500">(ATTENTION: this is illegal in some
                             countries)</span></p>
                     </div>
                 </div>
@@ -109,7 +114,8 @@
 
             <div class="border-b border-gray-900/10 dark:border-white/50 pb-12">
                 <h2 class="text-base font-semibold leading-7 text-gray-900 dark:text-white">TMDB Informations</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter here informations about TMDB. You can
+                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">You will enter here informations
+                    about TMDB. You can
                     find your API key in "Settings" after registering <a href="https://www.themoviedb.org/signup"
                                                                          target="_blank">here</a></p>
 
@@ -128,13 +134,15 @@
 
             <div class="border-b border-gray-900/10 dark:border-white/50 pb-12">
                 <h2 class="text-base font-semibold leading-7 text-gray-900 dark:text-white">Filtering</h2>
-                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set-up here your filtering parameters. Suiting results
+                <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set-up here your filtering
+                    parameters. Suiting results
                     is a must :)</p>
 
                 <div class="mt-10 space-y-10">
                     <fieldset>
                         <legend class="text-sm font-semibold leading-6 text-gray-900 dark:text-white">Sorting</legend>
-                        <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Choose the sorting that suits you the best.</p>
+                        <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Choose the sorting that suits
+                            you the best.</p>
 
                         <div class="mt-6 space-y-6">
                             <div class="relative flex gap-x-3">
@@ -144,7 +152,8 @@
                                            checked>
                                 </div>
                                 <div class="text-sm leading-6">
-                                    <label for="quality" class="block text-sm font-medium mb-2 dark:text-white">Quality</label>
+                                    <label for="quality"
+                                           class="block text-sm font-medium mb-2 dark:text-white">Quality</label>
                                     <p class="text-gray-500 dark:text-gray-300">Get the best quality on top</p>
                                 </div>
                             </div>
@@ -154,7 +163,8 @@
                                            class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
                                 </div>
                                 <div class="text-sm leading-6">
-                                    <label for="sizedesc" class="block text-sm font-medium mb-2 dark:text-white">Size descending</label>
+                                    <label for="sizedesc" class="block text-sm font-medium mb-2 dark:text-white">Size
+                                        descending</label>
                                     <p class="text-gray-500 dark:text-gray-300">Filter results by size descending</p>
                                 </div>
                             </div>
@@ -164,7 +174,8 @@
                                            class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
                                 </div>
                                 <div class="text-sm leading-6">
-                                    <label for="sizeasc" class="block text-sm font-medium mb-2 dark:text-white">Size ascending</label>
+                                    <label for="sizeasc" class="block text-sm font-medium mb-2 dark:text-white">Size
+                                        ascending</label>
                                     <p class="text-gray-500 dark:text-gray-300">Filter results by size ascending</p>
                                 </div>
                             </div>
@@ -175,17 +186,22 @@
                                            class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-600">
                                 </div>
                                 <div class="text-sm leading-6">
-                                    <label for="qualitythensize" class="block text-sm font-medium mb-2 dark:text-white">Quality then
+                                    <label for="qualitythensize" class="block text-sm font-medium mb-2 dark:text-white">Quality
+                                        then
                                         size</label>
-                                    <p class="text-gray-500 dark:text-gray-300">Filter results by quality then size descending</p>
+                                    <p class="text-gray-500 dark:text-gray-300">Filter results by quality then size
+                                        descending</p>
                                 </div>
                             </div>
                         </div>
                     </fieldset>
 
                     <fieldset>
-                        <legend class="text-sm font-semibold leading-6 text-gray-900 dark:text-white">Quality Exclusion</legend>
-                        <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Check qualities that you want to exclude</p>
+                        <legend class="text-sm font-semibold leading-6 text-gray-900 dark:text-white">Quality
+                            Exclusion
+                        </legend>
+                        <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Check qualities that you want
+                            to exclude</p>
                         <div class="mt-6 space-y-6">
                             <div class="flex items-center gap-x-3">
                                 <input oninput="" id="4k" name="4k" type="checkbox"
@@ -261,7 +277,8 @@
                                 <div class="overSelect"></div>
                             </div>
 
-                            <div id="languageCheckBoxes" class="bg-opacity-70 bg-white dark:bg-opacity-90 dark:bg-gray-900 border-gray-200">
+                            <div id="languageCheckBoxes"
+                                 class="bg-opacity-70 bg-white dark:bg-opacity-90 dark:bg-gray-900 border-gray-200">
                                 <label for="en">
                                     <input type="checkbox" id="en"/>
                                     🇬🇧
@@ -310,7 +327,8 @@
                         <div class="sm:col-span-3">
                             <label for="maxSize" class="block text-sm font-medium mb-2 dark:text-white">Maximum
                                 size</label>
-                            <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set a maximum size for your results in
+                            <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set a maximum size for
+                                your results in
                                 GB.</p>
 
                             <div class="mt-2">
@@ -326,7 +344,8 @@
                         <div class="sm:col-span-3">
                             <label for="maxSize" class="block text-sm font-medium mb-2 dark:text-white">Results per
                                 quality</label>
-                            <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set the amount of maximum results you want
+                            <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set the amount of maximum
+                                results you want
                                 per
                                 quality.</p>
 
@@ -344,7 +363,8 @@
                         <div class="sm:col-span-3">
                             <label for="maxResults" class="block text-sm font-medium mb-2 dark:text-white">Maximum
                                 results</label>
-                            <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set the amount of maximum results you
+                            <p class="mt-1 text-sm leading-6 text-gray-600 dark:text-gray-400">Set the amount of maximum
+                                results you
                                 want.</p>
 
                             <div class="mt-2">
