Changed page background

--- a/source/index-community.html
+++ b/source/index-community.html
@@ -7,7 +7,7 @@
     <style>
         /*On va ajouter la photo de fond */
         body {
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://help.nflxext.com/396a2a39-8d34-4260-b07a-6391fe04ded5_what_is_netflix_2_en.png') no-repeat fixed;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://i.ibb.co/WGTw4bV/stremio-bg.png') no-repeat fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
